chore: fix layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
 
 @font-face {
   font-family: "codicon";
@@ -24,7 +24,6 @@ body {
 }
 
 main {
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -36,6 +35,9 @@ main {
 
 .content {
   display: flex;
+  overflow-y: hidden;
+  overflow-x: auto;
+  height: 100%;
 }
 
 h1 {
@@ -46,13 +48,11 @@ h1 {
 }
 
 .middle {
-  width: 600px;
+  min-width: 350px;
+  max-width: 600px;
   overflow-y: auto;
   padding: var(--space7);
-}
-
-.right {
-  max-width: 900px;
+  box-sizing: border-box;
 }
 
 .monaco-wrapper {
